# ZGraphics2D

./: .gitignore  .gitmodules  CMakeLists.txt  LICENCE  config.hpp.in  premake5.lua
ZGraphics2D/: CMakeLists.txt  premake5.lua
ZGraphics2D/impl/detail/Context/: ContextImpl.cpp  ContextImpl.hpp  GLFWContext.cpp  GLFWContext.hpp
ZGraphics2D/impl/detail/Input/: GLFWKeyboard.cpp  GLFWKeyboard.hpp  GLFWKeyboard.inl  GLFWMouse.cpp  GLFWMouse.hpp  GLFWMouse.inl  KeyboardImpl.cpp  KeyboardImpl.hpp  MouseImpl.cpp  MouseImpl.hpp
ZGraphics2D/impl/detail/Window/: GLFWWindow.cpp  GLFWWindow.hpp  GLFWWindow.inl  WindowImpl.cpp  WindowImpl.hpp  WindowImpl.inl
ZGraphics2D/include/: zgpch.cpp  zgpch.hpp
ZGraphics2D/include/zgraphics2D/: defines.hpp  platform.hpp  zgmacros.hpp  zgplatform.hpp  zgraphics2D.hpp
ZGraphics2D/include/zgraphics2D/Camera/: Camera.hpp  FPSCamera.hpp  FPSCamera.inl  OrthographicCamera.hpp  OrthographicCamera.inl
ZGraphics2D/include/zgraphics2D/Common/: Colors.hpp  Image.hpp  Image.inl
ZGraphics2D/include/zgraphics2D/Engine/: Context.hpp  GraphicApplication.hpp  GraphicsEngine.hpp  GraphicsEngine.inl  GraphicsSettings.hpp  RenderEvent.hpp
ZGraphics2D/include/zgraphics2D/Input/: Input.hpp  Joystick.hpp  KeyEvent.hpp  KeyEvent.inl  KeyPressedEvent.hpp  KeyReleasedEvent.hpp  KeyRepeatedEvent.hpp  Keyboard.hpp  Keyboard.inl  Mouse.hpp  Mouse.inl  MouseButtonEvent.hpp  MouseButtonEvent.inl  MouseButtonPressedEvent.hpp  MouseButtonReleasedEvent.hpp  MouseEnteredEvent.hpp  MouseEvent.hpp  MouseEvent.inl  MouseMovedEvent.hpp  MouseScrolledEvent.hpp
ZGraphics2D/include/zgraphics2D/Input/Event/: KeyEvent.hpp  KeyEvent.inl  KeyPressedEvent.hpp  KeyReleasedEvent.hpp  KeyRepeatedEvent.hpp  MouseButtonEvent.hpp  MouseButtonEvent.inl  MouseButtonPressedEvent.hpp  MouseButtonReleasedEvent.hpp  MouseDroppedEvent.hpp  MouseDroppedEvent.inl  MouseEnteredEvent.hpp  MouseEnteredEvent.inl  MouseEvent.hpp  MouseEvent.inl  MouseMovedEvent.hpp  MouseScrolledEvent.hpp  MouseScrolledEvent.inl
ZGraphics2D/include/zgraphics2D/Renderable/: Cube.hpp  Cube.inl  Renderable.hpp  Sprite.hpp  Sprite.inl
ZGraphics2D/include/zgraphics2D/Renderer/: DefaultRenderer.hpp  Mesh.hpp  Renderable.hpp  Renderer.hpp  Shader.hpp  Shader.inl  Sprite.hpp  Texture.hpp  Texture.inl  TexturedMesh.hpp  Transform.hpp  Transform.inl  Vertex.hpp  Vertex2D.hpp  Vertex2D.inl  VertexLayout.hpp  ViewProjection.hpp
ZGraphics2D/include/zgraphics2D/Renderer/Buffers/: Buffer.hpp  Buffer.inl  IndexBuffer.hpp  IndexBuffer.inl  VertexArray.hpp  VertexArray.inl  VertexBuffer.hpp  VertexLayout.hpp  VertexLayout.inl
ZGraphics2D/include/zgraphics2D/Renderer/Resources/: Shader.hpp  Shader.inl  Texture.hpp  Texture.inl
ZGraphics2D/include/zgraphics2D/Renderer/Transforms/: Camera.hpp  Camera.inl  FPSCamera.hpp  Transform.hpp  View.hpp  View.inl  ViewProjection.hpp
ZGraphics2D/include/zgraphics2D/Resources/: Texture.hpp
ZGraphics2D/include/zgraphics2D/Text/: BitmapFont.hpp  BitmapFont.inl  Encoding.hpp  Font.hpp  Font.inl  Glyph.hpp  Glyph.inl
ZGraphics2D/include/zgraphics2D/Window/: ContextSettings.hpp  FrameBufferSettings.hpp  Window.hpp  Window.inl  WindowClosedEvent.hpp  WindowEvent.inl  WindowSettings.hpp
ZGraphics2D/include/zgraphics2D/Window/Event/: FrameBufferResisedEvent.hpp  FrameBufferResisedEvent.inl  WindowClosedEvent.hpp  WindowEvent.hpp  WindowEvent.inl  WindowFocusedEvent.hpp  WindowFocusedEvent.inl  WindowIconifiedEvent.hpp  WindowIconifiedEvent.inl  WindowMaximisedEvent.hpp  WindowMaximisedEvent.inl  WindowMovedEvent.hpp  WindowMovedEvent.inl  WindowRefreshedEvent.hpp  WindowResisedEvent.hpp  WindowResisedEvent.inl  WindowScaledEvent.hpp  WindowScaledEvent.inl
ZGraphics2D/src/: api.cpp
ZGraphics2D/src/Camera/: Camera.cpp  FPSCamera.cpp  OrthographicCamera.cpp
ZGraphics2D/src/Common/: Image.cpp
ZGraphics2D/src/Engine/: Context.cpp  GraphicApplication.cpp  GraphicsEngine.cpp  RenderEvent.cpp
ZGraphics2D/src/Engine/Event/: RenderEvent.cpp
ZGraphics2D/src/Input/: Input.cpp  Joystick.cpp  KeyEvent.cpp  KeyPressedEvent.cpp  KeyReleasedEvent.cpp  KeyRepeatedEvent.cpp  Keyboard.cpp  Mouse.cpp  MouseButtonEvent.cpp  MouseButtonPressedEvent.cpp  MouseButtonReleaseEvent.cpp  MouseEnteredEvent.cpp  MouseEvent.cpp  MouseMovedEvent.cpp  MouseScrolledEvent.cpp
ZGraphics2D/src/Input/Event/: KeyEvent.cpp  KeyPressedEvent.cpp  KeyReleasedEvent.cpp  KeyRepeatedEvent.cpp  MouseButtonEvent.cpp  MouseButtonPressedEvent.cpp  MouseButtonReleaseEvent.cpp  MouseDroppedEvent.cpp  MouseEnteredEvent.cpp  MouseEvent.cpp  MouseMovedEvent.cpp  MouseScrolledEvent.cpp
ZGraphics2D/src/Renderable/: Cube.cpp  Sprite.cpp
ZGraphics2D/src/Renderer/: DefaultRenderer.cpp  Shader.cpp  Sprite.cpp  Texture.cpp  Transform.cpp  Vertex2D.cpp
ZGraphics2D/src/Renderer/Buffers/: Buffer.cpp  IndexBuffer.cpp  VertexArray.cpp  VertexBuffer.cpp  VertexLayout.cpp
ZGraphics2D/src/Renderer/Resources/: Shader.cpp  Texture.cpp
ZGraphics2D/src/Renderer/Transforms/: Camera.cpp  FPSCamera.cpp  Transform.cpp  View.cpp
ZGraphics2D/src/Resources/: Shader.cpp  Texture.cpp
ZGraphics2D/src/Text/: BitmapFont.cpp  Font.cpp  Glyph.cpp
ZGraphics2D/src/Window/: Window.cpp  WindowClosedEvent.cpp  WindowEvent.cpp
ZGraphics2D/src/Window/Event/: FrameBufferResisedEvent.cpp  WindowClosedEvent.cpp  WindowEvent.cpp  WindowFocusedEvent.cpp  WindowIconifiedEvent.cpp  WindowMaximisedEvent.cpp  WindowMovedEvent.cpp  WindowRefreshedEvent.cpp  WindowResisedEvent.cpp  WindowScaledEvent.cpp
include/: api.hpp
