CMAKE_MINIMUM_REQUIRED(VERSION 3.20 FATAL_ERROR)

PROJECT(ZGraphics2D
        VERSION 0.1.0
        HOMEPAGE_URL https://github.com/AarnoldGad/ZGraphics2D.git
        LANGUAGES C CXX
        )

SET(CMAKE_CONFIGURATION_TYPES Release Debug)

SET(ZGraphics2D_VERSION_STAGE "pre")
SET(ZGraphics2D_VERSION_DAY 29)
SET(ZGraphics2D_VERSION_MONTH 11)
SET(ZGraphics2D_VERSION_YEAR 21)

MESSAGE(STATUS "Configuring ZGraphics2D ${ZGraphics2D_VERSION_MAJOR}-${ZGraphics2D_VERSION_MINOR}.${ZGraphics2D_VERSION_PATCH}${ZGraphics2D_VERSION_STAGE} of ${ZGraphics2D_VERSION_DAY}/${ZGraphics2D_VERSION_MONTH}/${ZGraphics2D_VERSION_YEAR}")

FIND_PACKAGE(Threads REQUIRED)
FIND_PACKAGE(OpenGL REQUIRED)
FIND_PACKAGE(Freetype 2.10.0 REQUIRED)

IF(UNIX AND NOT APPLE)
   FIND_PACKAGE(X11 REQUIRED)
ENDIF()

SET_PROPERTY(GLOBAL PROPERTY USE_FOLDERS ON)

SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}")
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}")
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}")

SET(CMAKE_DEBUG_POSTFIX -d)

SET(CMAKE_EXPORT_COMPILE_COMMANDS ON)

CONFIGURE_FILE(config.hpp.in zgconfig.hpp @ONLY NEWLINE_STYLE LF)

# Target may have been built by other dependents
IF(NOT TARGET zengine)
   ADD_SUBDIRECTORY(ZucchiniEngine)
ENDIF()

ADD_SUBDIRECTORY(ZGraphics2D/deps/glfw)
ADD_SUBDIRECTORY(ZGraphics2D)

